# coinflipper

./: README.md  capture_template.py  coin_classifier.onnx  coin_classifier.pth  coin_detector.py  create_rotated_copies.py  heads_ref.xcf  interactive_template_capture.py  interactive_template_processing.py  main.py  pyproject.toml  real_time_cnn_test.py  train_w_torch.py
